src/components/Projects/projects.css
.main-project {
  margin-top: 8em;
  display: grid;
  place-items: center;
  background-color: #f5f5f5;
  max-width: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
  color: #050505;
  -webkit-clip-path: ellipse(93% 100% at 40.97% 100%);
          clip-path: ellipse(93% 100% at 40.97% 100%);
}
.main-project .project-head {
  font-size: 2.5rem;
  font-weight: 700;
  margin-bottom: 2em;
  margin-top: 2em;
}
.main-project .project-flex {
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.main-project .project-flex .tilted-para {
  transform: translate3d(0px, 0px, 0px) perspective(1px) skew(0.0294deg, 0deg);
  padding-top: 0.5em;
  padding-bottom: 0.7em;
  transform: scaleX(1.5) scaleY(1.2);
  white-space: nowrap;
  font-size: 4rem;
  font-weight: 900;
  position: relative;
  transition: all 900ms;
}
.main-project .project-flex .tilted-para::before {
  content: "";
  position: absolute;
  width: 0px;
  height: 0px;
  background-color: transparent;
  border-top: 5px solid red;
  border-right: 5px solid red;
  bottom: 80px;
  left: -50px;
  transform: rotate(45deg);
}
.main-project .project-flex .tilted-para:hover {
  color: #FF0066;
}
.main-project .project-flex .tilted-para:hover::before {
  width: 30px;
  height: 30px;
}
.main-project .project-flex .solid {
  margin: 0 -5px;
  border: 0;
  border-top: 1px solid #c9c7c7;
}

@media all and (max-width: 926px) {
  .main-project {
    -webkit-clip-path: ellipse(192% 100% at 41.48% 100%);
            clip-path: ellipse(192% 100% at 41.48% 100%);
  }
  .main-project .project-head {
    font-size: 36px;
    margin-bottom: 1em;
    margin-top: 4em;
  }
  .main-project .project-flex {
    flex-direction: column;
  }
  .main-project .project-flex .tilted-para {
    padding-top: 1.5em;
    padding-bottom: 0.5em;
    transform: scaleX(1) scaleY(1);
    font-size: 3rem;
  }
  .main-project .project-flex .tilted-para::before {
    width: 15px;
    height: 15px;
    bottom: 55px;
    left: -42px;
  }
}
@media all and (max-width: 576px) {
  .main-project {
    margin-top: -2em;
  }
  .main-project .project-head {
    margin-bottom: 1em;
    margin-top: 4em;
  }
  .main-project .project-flex {
    padding: 10px;
    display: flex;
  }
  .main-project .project-flex .tilted-para {
    padding-top: 1.5em;
    padding-bottom: 0.5em;
    transform: scaleX(1) scaleY(1);
    font-size: 2rem;
  }
  .main-project .project-flex .tilted-para::before {
    width: 15px;
    height: 15px;
    bottom: 34px;
    left: -42px;
  }
  .main-project .project-flex .tilted-para:hover::before {
    width: 15px;
    height: 15px;
  }
}/*# sourceMappingURL=projects.css.map */

